fix some layout issue on android

--- a/app/theme/app.md.scss
+++ b/app/theme/app.md.scss
@@ -30,15 +30,3 @@
 // --------------------------------------------------
 // CSS that should only apply to the Material Design app
 
-.modal-wrapper {
-  opacity: 1;
-}
-
-.tab-button-text {
-  margin: 0;
-  text-transform: inherit;
-}
-
-.tab-button {
-  padding: 5px 0 0 0;
-}
